# Gameshelf_Docker_Compose

./: .dockerignore  .gitignore  Dockerfile  README.md  Tarea.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_games.py
