[project]
name = "gameshelf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic"
]


[project.optional-dependencies]
# Installed only in dev when you run `uv sync --dev`
dev = [
    "pytest",
    "requests"
]